# Chukrun

./: .gitignore  LICENSE  go.mod
.github/workflows/: pr-validation.yml
core/: bootstrap.go  runtime.go  runtime_test.go
core/config/: manager.go  manager_test.go
core/context/: context.go  context_test.go  serialization.go
core/errors/: error.go  error_test.go
core/events/: bus.go  bus_test.go
core/execution/: context.go  context_test.go  engine.go  execution.go  manager.go  manager_test.go  provider.go  registry.go  registry_test.go  retry.go  retry_test.go  scheduler.go  scheduler_test.go
core/lifecycle/: manager.go  manager_test.go
core/middleware/: auth.go  cache.go  costguard.go  logging.go  metrics.go  pipeline.go  pipeline_test.go  ratelimit.go  standard_middleware_test.go
core/telemetry/: logger.go  logger_test.go  telemetry.go  telemetry_test.go
proto/: context.proto  errors.proto  runtime.proto
runtime/: bootstrap.go  runtime.go  runtime_test.go
sdk-python/: pyproject.toml  pyrightconfig.json
sdk-python/src/runtime/: __init__.py  errors.py
sdk-python/src/runtime/_client/: __init__.py  async_client.py  channel.py  codec.py  context_bridge.py  error_bridge.py  retry.py  sync_client.py
sdk-python/src/runtime/_generated/: __init__.py  context_pb2.py  context_pb2_grpc.py  errors_pb2.py  errors_pb2_grpc.py  runtime_pb2.py  runtime_pb2_grpc.py
sdk-python/tests/integration/: test_client.py
sdk-python/tests/unit/: test_async_client_extra.py  test_channel.py  test_codec.py  test_context_bridge.py  test_error_bridge.py  test_retry.py
(+32 files in other folders)
