[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chukrun-runtime"
version = "0.1.0"
description = "Python SDK for Chukrun AI Runtime Core"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.50.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.50.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["src/runtime/_generated/*"]


